@@ -15,97 +15,140 @@
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
-  along with KeePassDroid.  If not, see<http://www.gnu.org/licenses/>.
+  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources>
-   <string name="about_feedback">Обратная связь:</string>
-   <string name="about_homepage">Домашняя страница:</string>
-   <string name="about_ok">OK</string>
-   <string name="AboutText">KeePassDroid является Android версией программы KeePass</string>
-   <string name="about_twitter">Twitter:</string>
-   <string name="add_entry">Добавить запись</string>
-   <string name="add_group">Добавить группу</string>
-   <string name="add_group_title">Добавить группу</string>
-   <string name="algorithm">Алогритм</string>
-   <string name="algorithm_colon">Алгоритм:</string>
-   <string name="app_name">KeePassDroid</string>
-   <string name="cancel">Отмена</string>
-   <string name="ClearClipboard">Буфер обмена очищен.</string>
-   <string name="current_group">Текущая группа:</string>
-   <string name="current_group_root">Текущая группа: корень</string>
-   <string name="enter_filename">Введите название базы данных:</string>
-   <string name="entry_accessed">Доступ:</string>
-   <string name="entry_and_or">Введите пароль и/или выберите файл-ключ:</string>
-   <string name="entry_cancel">Отмена</string>
-   <string name="entry_comment">Комментарии:</string>
-   <string name="entry_confpassword">Подтверждение пароля:</string>
-   <string name="entry_created">Создано:</string>
-   <string name="entry_expires">Срок годности:</string>
-   <string name="entry_keyfile">файл-ключ (опционально)</string>
-   <string name="entry_modified">Изменено:</string>
-   <string name="entry_password">Пароль</string>
-   <string name="entry_save">Сохранить</string>
-   <string name="entry_title">Название:</string>
-   <string name="entry_url">URL:</string>
-   <string name="entry_user_name">Имя пользователя:</string>
-   <string name="error_can_not_handle_uri">KeePassDroid не может обработать этот адрес</string>
-   <string name="error_could_not_create_group">Ошибка создания группы.</string>
-   <string name="error_database_exists">Этот файл уже существует.</string>
-   <string name="error_database_settings">Не возможно определить настройку базы данных.</string>
-   <string name="error_failed_to_launch_link">не могу перейти по ссылке</string>
-   <string name="error_filename_required">необходимо имя файла.</string>
-   <string name="error_file_not_create">Не возможно создать файл:</string>
-   <string name="error_no_name">Необходимо указать имя.</string>
-   <string name="error_nopass">Пароль и/или файл-ключ необходимы.</string>
-   <string name="error_pass_match">Пароли не совпадают.</string>
-   <string name="error_rounds_not_number">Колличество циклов должно быть числом.</string>
-   <string name="error_title_required">Необходимо указать название.</string>
-   <string name="FileNotFound">Файл не найден.</string>
-   <string name="group">Группа</string>
-   <string name="hint_comment">комментарий</string>
-   <string name="hint_conf_pass">подтверждение пароля</string>
-   <string name="hint_group_name">Название группы</string>
-   <string name="hint_keyfile">файл-ключ</string>
-   <string name="hint_pass">пароль</string>
-   <string name="hint_title">Название</string>
-   <string name="hint_url">url</string>
-   <string name="hint_username">Имя пользователя</string>
-   <string name="InvalidPassword">неверный пароль или файл-ключ.</string>
-   <string name="loading_database">Загрузка базы данных...</string>
-   <string name="MaskedPassword">*****</string>
-   <string name="menu_about">О программе</string>
-   <string name="menu_change_key">Изменить мастер-ключ</string>
-   <string name="menu_copy_pass">Скопировать пароль</string>
-   <string name="menu_copy_user">Скопировать имя пользователя</string>
-   <string name="menu_create">Создать</string>
-   <string name="menu_db_settings">Настройка базы данных</string>
-   <string name="menu_delete">Стереть</string>
-   <string name="menu_donate">Пожертвовать</string>
-   <string name="menu_edit">Редактировать</string>
-   <string name="menu_hide_password">Скрыть пароль</string>
-   <string name="menu_homepage">Перейти на домашнюю</string>
-   <string name="menu_lock">Заблокировать базу данных</string>
-   <string name="menu_open">Открыть</string>
-   <string name="menu_rename">Переименовать</string>
-   <string name="menu_search">Поиск</string>
-   <string name="menu_url">Перейти к URL</string>
-   <string name="never">Никогда</string>
-   <string name="no_keys">Нет записей в базе данных или группе.</string>
-   <string name="no_results">Ниего не найдено</string>
-   <string name="no_url_handler">Не могу обработать этот URL.</string>
-   <string name="open_recent">Открыть последнею базу данных (нажмите для открытия):</string>
-   <string name="pass_filename">Имя базы данных KeePass:</string>
-   <string name="pass_ok">Ок</string>
-   <string name="password_title">Введите пароль к базе данных</string>
-   <string name="progress_create">Создание новой базы данных...</string>
-   <string name="progress_title">В работе...</string>
-   <string name="rijndael">Rijndael (AES)</string>
-   <string name="root">Root</string>
-   <string name="rounds">Циклов шифрования</string>
-   <string name="rounds_explaination">Большое количество циклов шифрования обеспечивает большую защиту против брут-форс атак, но сильно замедляет загрузку/сохранение базы данных.</string>
-   <string name="rounds_hint">Циклов</string>
-   <string name="saving_database">Сохранение базы данных...</string>
-   <string name="search_hint">Введите название/описание</string>
-   <string name="search_label">Поиск</string>
-   <string name="show_password">Показать пароль</string>
+    <string name="about_feedback">Обратная связь:</string>
+    <string name="about_homepage">Домашняя страница:</string>
+    <string name="about_ok">OK</string>
+    <string name="AboutText">KeePassDroid является Android версией программы KeePass</string>
+    <string name="about_twitter">Твиттер:</string>
+    <string name="add_entry">Добавить запись</string>
+    <string name="add_group">Добавить группу</string>
+    <string name="add_group_title">Добавить группу</string>
+    <string name="algorithm">Алгоритм</string>
+    <string name="algorithm_colon">Алгоритм:</string>
+    <string name="app_name">KeePassDroid</string>
+    <string name="application">Программа</string>
+    <string name="application_settings">Настройки программы</string>
+    <string name="building_search_idx">Построение индекса поиска...</string>
+    <string name="cancel">Отмена</string>
+    <string name="ClearClipboard">Буфер обмена очищен.</string>
+    <string name="clipboard_timeout">Таймаут буфера обмена</string>
+    <string name="clipboard_timeout_summary">Время через которое будет очищен буфер обмена после копирования логина или пароля</string>
+    <string name="copy_username">Копировать логин в буфер обмена</string>
+    <string name="copy_password">Копировать пароль в буфер обмена</string>
+    <string name="creating_db_key">Создание ключа базы данных...</string>
+    <string name="current_group">Текущая группа: </string>
+    <string name="current_group_root">Текушая группа: корень</string>
+    <string name="database">База данных</string>
+    <string name="decrypting_db">Дешифровка базы данных...</string>
+    <string name="decrypting_entry">Расшифровка записи</string>
+    <string name="disclaimer_formal">KeePassDroid Copyright 2009 Brian Pellin comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL version 2 or later.</string>
+    <string name="enter_filename">Введите название базы данных:</string>
+    <string name="entry_accessed">Доступ:</string>
+    <string name="entry_and_or">Введите пароль и/или выберите файл-ключ:</string>
+    <string name="entry_cancel">Отмена</string>
+    <string name="entry_comment">Комментарии:</string>
+    <string name="entry_confpassword">Подтверждение пароля:</string>
+    <string name="entry_created">Создано:</string>
+    <string name="entry_expires">Срок годности:</string>
+    <string name="entry_keyfile">Файл-ключ (опционально)</string>
+    <string name="entry_modified">Изменено:</string>
+    <string name="entry_password">Пароль:</string>
+    <string name="entry_save">Сохранить</string>
+    <string name="entry_title">Название: </string>
+    <string name="entry_url">Адрес:</string>
+    <string name="entry_user_name">Логин:</string>
+    <string name="error_arc4">Шифрование Arc4 не поддерживается.</string>
+    <string name="error_can_not_handle_uri">KeePassDroid не может обработать этот адрес</string>
+    <string name="error_could_not_create_group">Ошибка создания группы</string>
+    <string name="error_could_not_create_parent">Не удалось создать родительский каталог.</string>
+    <string name="error_database_exists">Этот файл уже существует.</string>
+    <string name="error_database_settings">Не удалось определить параметры базы данных.</string>
+    <string name="error_failed_to_launch_link">Не удалось запустить ссылку.</string>
+    <string name="error_filename_required">необходимо имя файла.</string>
+    <string name="error_file_not_create">Невозможно создать файл:</string>
+    <string name="error_invalid_db">Неверная база данных.</string>
+    <string name="error_invalid_path">Неверный путь</string>
+    <string name="error_no_name">Необходимо указать имя.</string>
+    <string name="error_nopass">Пароль и/или файл-ключ необходимы.</string>
+    <string name="error_out_of_memory">Телефону не хватило памяти при анализе базы. Может быть база слишком велика для вашего телефона.</string>
+    <string name="error_pass_match">Пароли не совпадают.</string>
+    <string name="error_rounds_not_number">Колличество циклов должно быть числом.</string>
+    <string name="error_rounds_too_large">Колличество циклов слишком велико. Назначено 2147483648.</string>
+    <string name="error_title_required">Необходимо указать название.</string>
+    <string name="FileNotFound">Файл не найден.</string>
+    <string name="group">Группа</string>
+    <string name="hint_comment">комментарий</string>
+    <string name="hint_conf_pass">подтверждение пароля</string>
+    <string name="hint_group_name">Название группы</string>
+    <string name="hint_keyfile">файл-ключ</string>
+    <string name="hint_pass">пароль</string>
+    <string name="hint_title">заголовок</string>
+    <string name="hint_url">url</string>
+    <string name="hint_username">логин</string>
+    <string name="InvalidPassword">Неверный пароль или файл-ключ.</string>
+    <string name="invalid_db_sig">неизвестный формат базы данных.</string>
+    <string name="list_size_title">Размер списка групп</string>
+    <string name="list_size_summary">Размер текста в спсике групп</string>
+    <string name="loading_database">Загрузка базы данных...</string>
+    <string name="MaskedPassword">*****</string>
+    <string name="maskpass_title">Маска пароля</string>
+    <string name="maskpass_summary">Скрывать пароль по умолчанию</string>
+    <string name="menu_about">О программе</string>
+    <string name="menu_change_key">Изменить мастер-ключ</string>
+    <string name="menu_copy_pass">Скопировать пароль</string>
+    <string name="menu_copy_user">Скопировать логин</string>
+    <string name="menu_create">Создать</string>
+    <string name="menu_app_settings">Настройки</string>
+    <string name="menu_db_settings">настройка базы данных</string>
+    <string name="menu_delete">Удалить</string>
+    <string name="menu_donate">Пожертвовать</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="menu_hide_password">Hide Password</string>
+    <string name="menu_homepage">Перейти на домашнюю страницу</string>
+    <string name="menu_lock">Блокировать базу данных</string>
+    <string name="menu_open">Открыть</string>
+    <string name="menu_rename">Переименовать</string>
+    <string name="menu_search">Поиск</string>
+    <string name="menu_url">Перейти по ссылке</string>
+    <string name="never">Никогда</string>
+    <string name="no_keys">Нет записей в базе данных или группе.</string>
+    <string name="no_results">Ничего не найденно.</string>
+    <string name="no_url_handler">Нет обработчика для этого адреса.</string>
+    <string name="open_recent">Открыть последнею базу данных (нажмите для открытия):</string>
+    <string name="pass_filename">имя базы данных KeePass:</string>
+    <string name="pass_ok">Ок</string>
+    <string name="password_title">Введите пароль к базе данных</string>
+    <string name="progress_create">Создание новой базы данных...</string>
+    <string name="progress_title">Работаю...</string>
+    <string name="remember_keyfile_summary">Запоминать местоположение файла-ключа</string>
+    <string name="remember_keyfile_title">Сохранений файла-ключа</string>
+    <string name="remove_from_filelist">Удалить</string>
+    <string name="rijndael">Rijndael (AES)</string>
+    <string name="root">Корень</string>
+    <string name="rounds">Циклов шифрования</string>
+    <string name="rounds_explaination">Большое количество циклов шифрования обеспечивает большую защиту против брут-форс атак, но сильно замедляет загрузку/сохранение базы данных.</string>
+    <string name="rounds_hint">циклы</string>
+    <string name="saving_database">Сохранение базы данных...</string>
+    <string name="sort_name">Сортировать по имени</string>
+    <string name="sort_db">DB sort order</string>
+    <string name="search_hint">Введите заголовок или описание</string>
+    <string name="search_label">Поиск</string>
+    <string name="show_password">Показать пароль</string>
+    <string name="twofish">Twofish</string>
+    <string name="unsupported_db_version">Эта версия базы данных не поддерживается.</string>
+    
+    <string-array name="clipboard_timeout_options">
+    	<item>30 секунд</item>
+    	<item>1 минута</item>
+    	<item>5 минут</item>
+    	<item>Никогда</item>
+    </string-array>
+    <string-array name="list_size_options">
+    	<item>Маленький</item>
+    	<item>Средний</item>
+    	<item>Большой</item>
+    </string-array>
 </resources>
