@@ -1,3 +1,8 @@
+KeePassDroid (1.5.8)
+  * Update Russian translations
+  * Add Nynorsk translations
+  
+
 KeePassDroid (1.5.7)
   * KeePass 2.11 compatibility fixes
 
